# xmonadcfg

./: .gitignore  Colors.hs  Colorscheme.hs  xmonad-cfg.cabal  xmonad.hs  xmonadcfg.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
