cabal-version:      3.0
name:               xmonad-cfg
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             bx_sa1
maintainer:         bms110403@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable xmonad
    import:           warnings
    main-is:          xmonad.hs
    other-modules:  Colors
    -- other-extensions:
    build-depends:    base ^>=4.18.3
        , xmonad
        , xmonad-contrib
        , containers
        , directory 
        , filepath 
        , fdo-notify
        , dbus
        , utf8-string
    hs-source-dirs:   .
    default-language: Haskell2010
